--- a/Cocoon/Views/Dashboard/Layout.cshtml
+++ b/Cocoon/Views/Dashboard/Layout.cshtml
@@ -35,9 +35,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap" rel="stylesheet">
     <!-- summernote rich text editor -->
     <link href="~/Content/assets/plugins/summernote-0.8.18-dist/summernote.min.css" rel="stylesheet" />
-    <link rel="apple-touch-icon" sizes="60x60" href="~/Content/web/img/G4FitLogo-removebg.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="~/Content/web/img/g4fitLogo.jpg">
-    <link rel="icon" type="image/png" sizes="32x32" href="~/Content/web/img/g4fitLogo.jpg">
+    <link rel="apple-touch-icon" sizes="60x60" href="~/Content/web/img/logo-removebg.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="~/Content/web/img/logo.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="~/Content/web/img/logo.jpg">
     <style>
         body {
             font-family: 'Cairo', sans-serif;
