--- a/Cocoon/Views/Partials/WebsiteNavbar.cshtml
+++ b/Cocoon/Views/Partials/WebsiteNavbar.cshtml
@@ -23,7 +23,7 @@
             <div class="Logo text-right hvr-grow">
                 <!--i(class="fab fa-optin-monster fa-3x")-->
                 <a href="@Url.Action("Index", "Home")">
-                    <img src="~/Content/web/img/logo/g4fitLogo.jpg" width="90" height="60">
+                    <img src="~/Content/web/img/logo-removebg.png" width="90" height="60">
                 </a>
             </div>
             <div class="inner_links text-center wow bounceIn">
@@ -74,7 +74,7 @@
                                     {
                                         foreach (var notification in Model.Notifications)
                                         {
-                                            <li  style="color:white;"class="hvr-pulse-grow"><img class="rounded-circle ml-3" src="~/Content/web/img/G4FitLogo-removebg.png" width="30" height="30"><span>@notification.Title</span><br /><small>@notification.Body</small></li>
+                                            <li  style="color:white;"class="hvr-pulse-grow"><img class="rounded-circle ml-3" src="~/Content/web/img/logo-removebg.png" width="30" height="30"><span>@notification.Title</span><br /><small>@notification.Body</small></li>
                                             <hr>
                                         }
                                     }
