--- a/Cocoon/Views/Services/Create.cshtml
+++ b/Cocoon/Views/Services/Create.cshtml
@@ -82,21 +82,23 @@
                             </div>
 
                             <div class="row" style="margin:10px">
-                                <div class="col-lg-6">
+                                <div class="col-lg-12">
                                     <div class="form-group">
-                                        <label for="DescriptionAr" class="col-sm-5 control-label">وصف الخدمه بالعربى:</label>
-                                        <div class="col-sm-7">
-                                            @Html.TextAreaFor(model => model.DescriptionAr, htmlAttributes: new { @class = "form-control", rows = 4 })
+                                        <label for="DescriptionAr" class="col-sm-2 control-label">وصف الخدمه بالعربى:</label>
+                                        <div class="col-sm-10">
+                                            @*@Html.TextAreaFor(model => model.DescriptionAr, htmlAttributes: new { @class = "form-control", rows = 4 })*@
+                                            @Html.TextAreaFor(w => w.DescriptionAr, new { @class = "rich-text-editor" })
                                             @Html.ValidationMessageFor(d => d.DescriptionAr, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="col-lg-6">
+                                <div class="col-lg-12">
                                     <div class="form-group">
-                                        <label for="DescriptionEn" class="col-sm-5 control-label">وصف الخدمه بالانجليزى:</label>
-                                        <div class="col-sm-7">
-                                            @Html.TextAreaFor(model => model.DescriptionEn, htmlAttributes: new { @class = "form-control", rows = 4 })
+                                        <label for="DescriptionEn" class="col-sm-2 control-label">وصف الخدمه بالانجليزى:</label>
+                                        <div class="col-sm-10">
+                                            @*@Html.TextAreaFor(model => model.DescriptionEn, htmlAttributes: new { @class = "form-control", rows = 4 })*@
+                                            @Html.TextAreaFor(w => w.DescriptionEn, new { @class = "rich-text-editor" })
                                             @Html.ValidationMessageFor(d => d.DescriptionEn, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
